# openvizui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.agent/workflows/: codeql.yml  verify_build_tools.md
.dish/: workspace-id
.github/workflows/: codeql.yml  release.yml  super-linter.yml
docs/: README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_commands.rs_snippet  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  env.rs  fs.rs  mod.rs  pty.rs  skills.rs  utils.rs
src/components/: ClaudeCodeAuthEditor.tsx  CodebuddyAuthEditor.tsx  CodexAuthEditor.tsx  CommandPresets.tsx  ContextBucket.tsx  CopilotAuthEditor.tsx  DiffViewer.tsx  EnvironmentStatusInfo.tsx  GeminiAuthEditor.tsx  GlobalSearch.tsx  Logo.tsx  McpMonitor.tsx  ModelSwitcher.tsx  OpenCodeAuthEditor.tsx  PluginManagement.tsx  QoderAuthEditor.tsx  ResizableSider.tsx  SkillMonitor.tsx  Terminal.tsx  TitleBar.tsx  VisualConfigEditor.tsx  WorkspaceSider.tsx
src/constants/: i18n.ts  terminal.ts  tools.ts
src/layouts/: MainLayout.tsx
src/lib/: tauri.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/pages/: AISettings.tsx  About.tsx  Apps.tsx  Dashboard.tsx  Settings.tsx  (+2 more)
(+14 files in other folders)
