[package]
name = "openvizui"
version = "1.0.3"
description = "A Tauri App"
authors = ["Anthony Rivera"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.9.0"
serial_test = "3.3.1"
opener = "0.8.4"
tauri-plugin-dialog = "2.5.4"
tauri-plugin-fs = "2.2.0"
reqwest = { version = "0.13.1", features = ["stream", "socks"] }
futures-util = "0.3.31"
zip-extract = "0.1"
tar = "0.4"
flate2 = "1.0"
regex = "1.10.4"
which = "8.0.0"
